Seperated urls.py

--- a/SecureDoc/accounts/templates/accounts/signup.html
+++ b/SecureDoc/accounts/templates/accounts/signup.html
@@ -10,7 +10,7 @@
     <br/><br/>
     {% endif %}
 
-    <form method="post" action="{% url 'signup' %}">
+    <form method="post" action="{% url 'accounts:signup' %}">
         {% csrf_token %}
         Username:
         <br />
