--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
     <br/><br/>
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'accounts:login' %}">
         {% csrf_token %}
         Username:
         <br />
