--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -12,6 +12,11 @@
 
     <form method="post" action="{% url 'accounts:login' %}">
         {% csrf_token %}
+
+        {% if request.GET.next %}
+        <input type="hidden" name="next" value={{ request.GET.next }} >
+        {% endif %}
+
         Username:
         <br />
         <input type="text" name="username" />
