--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Login!</title>
+</head>
+<body>
+
+    {% extends 'base.html' %}
+
+    {% block content %}
+
     <h1>Login!</h1>
 
     {%if error %}
@@ -29,8 +36,8 @@
 
         <input type="submit" value="Login">
     </form>
-</head>
-<body>
+
+    {% endblock %}
 
 </body>
 </html>
