--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>New Post</title>
+</head>
+<body>
+
+    {% extends 'base.html' %}
+    {% block content %}
+
     <h1>New Post!</h1>
 
     {%if error %}
@@ -25,8 +31,8 @@
 
         <input type="submit" value="Save">
     </form>
-</head>
-<body>
+
+    {% endblock %}
 
 </body>
 </html>
