--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
+    {% extends 'base.html' %}
+
+    {% block content %}
+
     <div class="container">
       {{post.id}}
       <br>
@@ -14,6 +18,6 @@
       {{post.document}}
   </div>
 
-
+    {% endblock %}
 </body>
 </html>
