Added logout functionality

--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -17,7 +17,7 @@
     <br/><br/>
     {% endif %}
 
-    <form method="post" action="{% url 'accounts:login' %}">
+    <form method="POST" action="{% url 'accounts:login' %}">
         {% csrf_token %}
 
         {% if request.GET.next %}
