--- a/SecureDoc/accounts/templates/accounts/signup.html
+++ b/SecureDoc/accounts/templates/accounts/signup.html
@@ -33,9 +33,9 @@
         Confirm Password:
         <br />
         <input type="password" name="password2" />
-        <br />
+        <br /><br/>
 
-        <input type="submit" value="SignUp">
+        <input input class="btn btn-primary" type="submit" value="SignUp">
     </form>
 
     {% endblock %}
