--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -27,9 +27,9 @@
         Document:
         <br />
         <input type="text" name="document" />
-        <br />
+        <br /><br/>
 
-        <input type="submit" value="Save">
+        <input input class="btn btn-primary" type="submit" value="Save">
     </form>
 
     {% endblock %}
