--- a/SecureDoc/posts/templates/posts/home.html
+++ b/SecureDoc/posts/templates/posts/home.html
@@ -11,7 +11,7 @@
     {% block content %}
 
     <h1>Secure Document Sharing</h1>
-    <a href="{% url 'posts:create' %}">New Document</a>
+    <a input class="btn btn-primary" href="{% url 'posts:create' %}">New Document</a>
 
 
     <br/>
