--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -32,9 +32,9 @@
         Password:
         <br />
         <input type="password" name="password" />
-        <br />
+        <br /><br/>
 
-        <input type="submit" value="Login">
+        <input input class="btn btn-primary" type="submit" value="Login">
     </form>
 
     {% endblock %}
