--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -13,8 +13,9 @@
     <h1>Login!</h1>
 
     {%if error %}
-    {{ error }}
-    <br/><br/>
+        <div class="alert alert-danger" role="alert">
+        {{ error }}
+        </div>
     {% endif %}
 
     <form method="POST" action="{% url 'accounts:login' %}">
