--- a/SecureDoc/accounts/templates/accounts/signup.html
+++ b/SecureDoc/accounts/templates/accounts/signup.html
@@ -14,8 +14,9 @@
     <h1>Sign Up!</h1>
 
     {%if error %}
-    {{ error }}
-    <br/><br/>
+        <div class="alert alert-danger" role="alert">
+        {{ error }}
+        </div>
     {% endif %}
 
     <form method="post" action="{% url 'accounts:signup' %}">
