--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -41,7 +41,11 @@
         {% wysiwyg_editor "foo" %}
 
 
-        <input input class="btn btn-primary" type="submit" value="Save">
+        <br/>
+
+        <button class="btn btn-primary" type="submit" value="Save">
+          <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+        </button>
     </form>
 
 
