--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -33,8 +33,12 @@
 
         {% wysiwyg_editor "foo" %}
 
+        <br/>
 
-        <input input class="btn btn-primary" type="submit" value="Save">
+        <button class="btn btn-primary" type="submit" value="Save">
+          <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+        </button>
+
     </form>
     </div>
 
