--- a/SecureDoc/templates/base.html
+++ b/SecureDoc/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynav">
