--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -35,6 +35,11 @@
 
         <br/>
 
+        Nominated:
+        <br />
+        <input type="text" name="nomuser" value="{{post.nominated}}">
+        <br/><br/>
+
         <button class="btn btn-primary" type="submit" value="Save">
           <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
         </button>
