--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -40,9 +40,14 @@
 
         {% wysiwyg_editor "foo" %}
 
-
         <br/>
 
+        Nominate User:
+        <br />
+        <input type="text" name="nomuser" />
+        <br /><br />
+
+        <br/>
         <button class="btn btn-primary" type="submit" value="Save">
           <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
         </button>
