Added ability to view the posts shared with you.

--- a/SecureDoc/posts/templates/posts/home.html
+++ b/SecureDoc/posts/templates/posts/home.html
@@ -45,7 +45,7 @@
                     {% for shared_posts in shared_posts.all %}
                     <tr>
                         <td>
-                            <a href="">{{shared_posts.title}}</a>
+                            <a href="{% url 'posts:view' shared_posts.id %}">{{shared_posts.title}}</a>
                             <br/>
                             {{shared_posts.pub_date}} by {{shared_posts.author.username}}
                         </td>
