--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -10,33 +10,38 @@
 
     {% block content %}
 
-    <h1>Login!</h1>
 
-    {%if error %}
-        <div class="alert alert-danger" role="alert">
-        {{ error }}
+    <div class="container container-table">
+        <div class="row vertical-center-row">
+            <div class="text-center col-md-4 col-md-offset-4">
+                <h1>Login!</h1>
+
+                {%if error %}
+                    <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                    </div>
+                {% endif %}
+
+                <form method="POST" action="{% url 'accounts:login' %}">
+                    {% csrf_token %}
+
+                    {% if request.GET.next %}
+                    <input type="hidden" name="next" value={{ request.GET.next }} >
+                    {% endif %}
+
+                    <br />
+                    <input type="text" name="username" placeholder="Username" class="form-control"/>
+                    <br />
+
+                    <br />
+                    <input type="password" name="password" placeholder="Password" class="form-control"/>
+                    <br /><br/>
+
+                    <input input class="btn btn-primary  btn-lg btn-full" type="submit" value="Login" >
+                </form>
+            </div>
         </div>
-    {% endif %}
-
-    <form method="POST" action="{% url 'accounts:login' %}">
-        {% csrf_token %}
-
-        {% if request.GET.next %}
-        <input type="hidden" name="next" value={{ request.GET.next }} >
-        {% endif %}
-
-        Username:
-        <br />
-        <input type="text" name="username" />
-        <br />
-
-        Password:
-        <br />
-        <input type="password" name="password" />
-        <br /><br/>
-
-        <input input class="btn btn-primary" type="submit" value="Login">
-    </form>
+    </div>
 
     {% endblock %}
 
