--- a/SecureDoc/posts/templates/posts/view.html
+++ b/SecureDoc/posts/templates/posts/view.html
@@ -14,16 +14,14 @@
 
 
     <div class="container">
-        <form method="POST" action="">
+        <form method="POST" action="{% url 'home' %}">
             {% csrf_token %}
 
             <input type="hidden" name="post_id" value={{post.id}} >
 
 
-            Tile:
+            <h3>{{post.title}}</h3>
             <br />
-            <input readonly type="text" name="title" value="{{post.title}}">
-            <br /><br />
 
 
             {% load wysiwyg %}
@@ -35,13 +33,9 @@
 
             <br/>
 
-            Nominated:
-            <br />
-            <input readonly type="text" name="nomuser" value="{{post.nominated}}">
-            <br/><br/>
 
             <button class="btn btn-primary" type="submit" value="Save">
-              <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
             </button>
 
         </form>
