--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -37,7 +37,7 @@
                     <input type="password" name="password" placeholder="Password" class="form-control"/>
                     <br /><br/>
 
-                    <input input class="btn btn-primary  btn-lg btn-full" type="submit" value="Login" >
+                    <input input class="btn btn-primary btn-lg btn-block" type="submit" value="Login" >
                 </form>
             </div>
         </div>
