--- a/SecureDoc/accounts/templates/accounts/signup.html
+++ b/SecureDoc/accounts/templates/accounts/signup.html
@@ -40,7 +40,7 @@
                     <input type="password" name="password2" placeholder="Confirm Password" class="form-control"/>
                     <br /><br/>
 
-                    <input input class="btn btn-primary  btn-lg btn-full" type="submit" value="SignUp" >
+                    <input input class="btn btn-primary btn-lg btn-block" type="submit" value="SignUp" >
                 </form>
             </div>
         </div>
