Authors ability to allow users to only view or edit the doc

--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -47,10 +47,10 @@
                 <br/>
                 <div class="btn-group" data-toggle="buttons">
                   <label class="btn btn-primary active">
-                    <input type="radio" name="view_only" id="view_only" autocomplete="off" checked value="False"> View Only
+                    <input type="radio" name="edit_option" id="view_only" autocomplete="off" checked value="False"> View Only
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" name="edit" id="edit" autocomplete="off" value="True"> Ability to Edit
+                    <input type="radio" name="edit_option" id="edit" autocomplete="off" value="True"> Ability to Edit
                   </label>
                 </div>
             </div>
