--- a/SecureDoc/accounts/templates/accounts/signup.html
+++ b/SecureDoc/accounts/templates/accounts/signup.html
@@ -33,6 +33,18 @@
                     <br />
 
                     <br />
+                    <input type="email" name="email" placeholder="email" class="form-control"/>
+                    <br />
+
+                    <br />
+                    <input type="text" name="fname" placeholder="First Name" class="form-control"/>
+                    <br />
+
+                    <br />
+                    <input type="text" name="lname" placeholder="Last Name" class="form-control"/>
+                    <br />
+
+                    <br />
                     <input type="password" name="password1" placeholder="Password" class="form-control"/>
                     <br />
 
