--- a/SecureDoc/templates/base.html
+++ b/SecureDoc/templates/base.html
@@ -26,7 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="{% url 'home' %}">Secure Document Sharing</a>
+
+          <a class="navbar-brand" href="{% url 'home' %}">Secure Document Sharing</a>
+          <ul class="nav navbar-nav">
+            <li><a href="{% url 'accounts:profile' %}">Profile</a>
+          </ul>
       </div>
         <div class="collapse navbar-collapse" id="mynav">
             <ul class="nav navbar-nav navbar-right">
