View friends page has basic functionality but there is currently a multi friend error

--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -10,7 +10,17 @@
 
     {% block content %}
 
-    <h1>View Friends</h1>
+        <h1>View Friends</h1>
+
+        <table class="table table-hover">
+            {% for friends in friends.all %}
+                <tr>
+                    <td>
+                        <a href="">{{friends.username}}</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
 
 
     {% endblock %}
