--- a/SecureDoc/templates/base.html
+++ b/SecureDoc/templates/base.html
@@ -29,7 +29,8 @@
 
           <a class="navbar-brand" href="{% url 'home' %}">Secure Document Sharing</a>
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'accounts:profile' %}">Profile</a>
+              <li><a href="{% url 'accounts:profile' %}">Profile</a>
+              <li><a href="{% url 'friends:view_friends' %}">Friends</a>
           </ul>
       </div>
         <div class="collapse navbar-collapse" id="mynav">
