--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -14,7 +14,6 @@
             <h1>Friends</h1>
         </div>
         <br/>
-
         <div class="row">
           <div class="col-md-4">
               <h3>Your friends</h3>
@@ -30,9 +29,9 @@
           <div class="col-md-4">
               <h3>Friend Requests</h3>
               <table class="table table-hover">
-                  {% for user in users %}
+                  {% for req in friend_req %}
                       <tr>
-                          <td>{{user.first.username}}</td>
+                          <td>{{req.first.username}}</td>
                           <td class="text-right"><button type="button" class="btn btn-success">Accept</button></td>
                           <td class="text-right"><button type="button" class="btn btn-danger">Decline</button></td>
                       </tr>
@@ -44,7 +43,7 @@
               <form class="form-inline">
                   <div class="form-group">
                     <label class="sr-only" for="exampleInputEmail3">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="username">
+                    <input type="username" class="form-control" id="exampleInputEmail3" placeholder="username">
                   </div>
                   <button type="submit" class="btn btn-default">Send Request</button>
                 </form>
