--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -57,8 +57,8 @@
               <form class="form-inline" name="add_friend">
                    {% csrf_token %}
                   <div class="form-group">
-                    <label class="sr-only" for="exampleInputEmail3">Username</label>
-                    <input type="username" class="form-control" id="exampleInputEmail3" placeholder="username">
+                    <label class="sr-only" for="Username">Username</label>
+                    <input type="username" class="form-control" name="username" placeholder="username">
                   </div>
                   <button type="submit" class="btn btn-default">Send Request</button>
                 </form>
