--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -54,11 +54,11 @@
           </div>
           <div class="col-md-4">
               <h3>Add friends</h3>
-              <form class="form-inline" name="add_friend">
+              <form method="post" class="form-inline" name="add_friend" action="{% url 'friends:add_friend' %}" >
                    {% csrf_token %}
                   <div class="form-group">
                     <label class="sr-only" for="Username">Username</label>
-                    <input type="username" class="form-control" name="username" placeholder="username">
+                     <input type="text" name="username" placeholder="Username" class="form-control"/>
                   </div>
                   <button type="submit" class="btn btn-default">Send Request</button>
                 </form>
