--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -34,31 +34,40 @@
 
             <br/>
 
-            <div class="row">
-                <div class="col-md-9 col-md-push-3">
-                    Sharing Option:
-                    <br/>
-                    <div class="btn-group" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="view_only" id="view_only" autocomplete="off" checked> View Only
-                      </label>
-                      <label class="btn btn-primary">
-                        <input type="radio" name="edit" id="edit" autocomplete="off"> Ability to Edit
-                      </label>
-                    </div>
-                </div>
-                <div class="col-md-3 col-md-pull-9">
-                    Nominate User:
-                    <br />
-                    <input type="text" name="nomuser" />
-                </div>
-            </div>
-
             <button class="btn btn-primary" type="submit" value="Save">
               <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
             </button>
-
         </form>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Share with Friends</h3>
+                <table class="table table-hover">
+                    {% for user in users %}
+                        <td>
+                        <td>{{user.first.username}}</td>
+                        <td class="text-right">
+                            <form method="post" action="{% url 'posts:share_viewing' %}" name="share_viewing">
+                                {% csrf_token %}
+                                <input type="hidden" name="post_id_to_share" value={{post.id}} >
+                                <input type="hidden" name="post_author" value={{post.author}} >
+                                <input type="hidden" name="friend_username" value={{ user.first.username }} >
+                                <input class="btn btn-primary" type="submit" value="Ability to View">
+                            </form>
+                        </td>
+                        <td class="text-right">
+                            <form method="post" action="{% url 'posts:share_editing' %}" name="share_editing">
+                                {% csrf_token %}
+                                <input type="hidden" name="post_id_to_share" value={{post.id}} >
+                                <input type="hidden" name="post_author" value={{post.author}} >
+                                <input type="hidden" name="friend_username" value={{ user.first.username }} >
+                                <input class="btn btn-primary" type="submit" value="Ability to Edit">
+                            </form>
+                        </td>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
     </div>
 
     {% endblock %}
