--- a/SecureDoc/friends/templates/friends/view_friends.html
+++ b/SecureDoc/friends/templates/friends/view_friends.html
@@ -62,6 +62,11 @@
                   </div>
                   <button type="submit" class="btn btn-default">Send Request</button>
                 </form>
+              {%if error %}
+                  <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                  </div>
+              {% endif %}
           </div>
         </div>
 
