--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -42,31 +42,33 @@
 
 
         <div class="row">
-            <div class="col-md-9 col-md-push-3">
-                Sharing Option:
-                <br/>
-                <div class="btn-group" data-toggle="buttons">
-                  <label class="btn btn-primary active">
-                    <input type="radio" name="edit_option" id="view_only" autocomplete="off" checked value="False"> View Only
-                  </label>
-                  <label class="btn btn-primary">
-                    <input type="radio" name="edit_option" id="edit" autocomplete="off" value="True"> Ability to Edit
-                  </label>
-                </div>
-            </div>
-            <div class="col-md-3 col-md-pull-9">
+            <div class="col-md-6">
+                <h3>Share with Friends</h3>
                 <table class="table table-hover">
-                  {% for user in users %}
-                      <form method="post" action="" name="share_with">
-                       {% csrf_token %}
-                          <tr>
-                              <input type="hidden" name="friend_id" value={{ user.first.id }} >
-                              <td>{{user.first.username}}</td>
-                              <td class="text-right"><button type="submit" class="btn btn-success">Share With</button></td>
-                          </tr>
-                      </form>
-                  {% endfor %}
-              </table>
+                    {% for user in users %}
+                        <td>
+                        <td>{{user.first.username}}</td>
+                        <td class="text-right">
+                            <form method="post" action="{% url 'posts:share_viewing' %}" name="share_viewing">
+                                {% csrf_token %}
+                                <input type="hidden" name="post_id_to_share" value={{post.id}} >
+                                <input type="hidden" name="post_author" value={{post.author}} >
+                                <input type="hidden" name="friend_username" value={{ user.first.username }} >
+                                <input class="btn btn-primary" type="submit" value="Ability to View">
+                            </form>
+                        </td>
+                        <td class="text-right">
+                            <form method="post" action="{% url 'posts:share_editing' %}" name="share_editing">
+                                {% csrf_token %}
+                                <input type="hidden" name="post_id_to_share" value={{post.id}} >
+                                <input type="hidden" name="post_author" value={{post.author}} >
+                                <input type="hidden" name="friend_username" value={{ user.first.username }} >
+                                <input class="btn btn-primary" type="submit" value="Ability to Edit">
+                            </form>
+                        </td>
+                        <tr></tr>
+                    {% endfor %}
+                </table>
             </div>
         </div>
 
