--- a/SecureDoc/posts/templates/posts/view.html
+++ b/SecureDoc/posts/templates/posts/view.html
@@ -41,10 +41,18 @@
 
             <br/>
 
+            {%if edit_ability.0.edit_options %}
+                <button class="btn btn-primary" type="submit" value="Save">
+                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+                </button>
+            {% endif %}
 
-            <button class="btn btn-primary" type="submit" value="Save">
-                <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
-            </button>
+            {%if edit_ability.0.edit_options == False %}
+                <button class="btn btn-primary" type="submit" value="Save">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+                </button>
+            {% endif %}
+
 
         </form>
     </div>
