--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -44,7 +44,7 @@
                         <td>
                         <td>{{user.first.username}}</td>
                         <td class="text-right">
-                            <form >
+                            <form method="post" action="{% url 'posts:share_viewing' %}" name="share_viewing">
                                 {% csrf_token %}
                                 <input type="hidden" name="post_id_to_share" value={{post.id}} >
                                 <input type="hidden" name="post_author" value={{post.author}} >
@@ -53,7 +53,7 @@
                             </form>
                         </td>
                         <td class="text-right">
-                            <form>
+                            <form method="post" action="{% url 'posts:share_editing' %}" name="share_editing">
                                 {% csrf_token %}
                                 <input type="hidden" name="post_id_to_share" value={{post.id}} >
                                 <input type="hidden" name="post_author" value={{post.author}} >
