--- a/SecureDoc/posts/templates/posts/view.html
+++ b/SecureDoc/posts/templates/posts/view.html
@@ -15,49 +15,54 @@
 
 
     <div class="container">
-        <form method="POST" action="{% url 'home' %}">
-            {% csrf_token %}
+        {%if edit_ability.0.edit_options == True %}
+            <form method="POST" action="{% url 'posts:update_nominated' %}">
+                <input type="hidden" name="post_id" value={{post.id}} >
+                <input type="hidden" name="title" id="title" value={{ post.title }}>
+        {% endif %}
 
-            <input type="hidden" name="post_id" value={{post.id}} >
-            <input type="hidden" name="test" id="test">
+        {%if edit_ability.0.edit_options == False %}
+            <form method="POST" action="{% url 'home' %}">
+        {% endif %}
 
-            <h3>{{post.title}}</h3>
-            <br />
+                {% csrf_token %}
 
-
-            {% load wysiwyg %}
-            {% wysiwyg_setup %}
-
-
-            {%if edit_ability.0.edit_options %}
-                <textarea id="foo" name="document">{{post.document}}</textarea>
-            {% endif %}
-
-            {%if edit_ability.0.edit_options == False %}
-                <textarea readonly id="foo" name="document">{{post.document}}</textarea>
-            {% endif %}
+                <h3>{{post.title}}</h3>
+                <br />
 
 
-            {% wysiwyg_editor "foo" %}
+                {% load wysiwyg %}
+                {% wysiwyg_setup %}
 
-            <br/>
 
-            {%if edit_ability.0.edit_options %}
-                <button class="btn btn-primary" type="submit" value="Save" onclick="encrypt()">
-                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
-                </button>
-            {% endif %}
+                {%if edit_ability.0.edit_options %}
+                    <textarea id="foo" name="document">{{post.document}}</textarea>
+                    <input type="hidden" name="test" id="test">
+                {% endif %}
 
-            {%if edit_ability.0.edit_options == False %}
-                <button class="btn btn-primary" type="submit" value="Save">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
-                </button>
-            {% endif %}
+                {%if edit_ability.0.edit_options == False %}
+                    <textarea readonly id="foo" name="document">{{post.document}}</textarea>
+                {% endif %}
 
+
+                {% wysiwyg_editor "foo" %}
+
+                <br/>
+
+                {%if edit_ability.0.edit_options %}
+                    <button class="btn btn-primary" type="submit" value="Save" onclick="encrypt()">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Save
+                    </button>
+                {% endif %}
+
+                {%if edit_ability.0.edit_options == False %}
+                    <button class="btn btn-primary" type="submit" value="Save">
+                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+                    </button>
+                {% endif %}
 
         </form>
     </div>
-
 
         <script type="text/javascript">
             var key = CryptoJS.enc.Base64.parse("#base64Key#");
@@ -72,6 +77,9 @@
 			    var encrypted = CryptoJS.AES.encrypt(doc, key,  {iv: iv});
 
                 document.getElementById("test").value = encrypted;
+
+                var value = document.getElementById("test").value
+			    console.log(value);
 
                 return false;
             }
