--- a/SecureDoc/posts/templates/posts/create.html
+++ b/SecureDoc/posts/templates/posts/create.html
@@ -43,6 +43,8 @@
 
         <textarea id="foo" name="document"></textarea>
         <input type="hidden" name="test" id="test">
+        <input type="hidden" name="key" id="key">
+        <input type="hidden" name="iv" id="iv">
 
         {% wysiwyg_editor "foo" %}
 
@@ -77,10 +79,10 @@
             var key = CryptoJS.SHA256(seed.toString());
             console.log("key is: " + key);
 
+            document.getElementById("key").value = key;
+            document.getElementById("iv").value = seed;
+
         </script>
-
-
-
 
     {% endblock %}
 
