--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -71,6 +71,7 @@
         <script type="text/javascript">
             var key = CryptoJS.enc.Base64.parse("#base64Key#");
             var iv  = CryptoJS.enc.Base64.parse("#base64IV#");
+            console.log("iv is: " + iv);
             var doc = "{{post.document|escapejs}}";
 
             var decrypted = CryptoJS.AES.decrypt(doc, key, {iv: iv});
